--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <div class="invitation-body">
         <p>Dear Beuty!❤️❤️❤️</p>
         <p>Chúng mình trân trọng mời bạn tham gia buổi gặp mặt kỷ yếu của khóa học. Hãy đến cùng kỷ niệm và niềm vui!</p>
-        <p><strong>⏰Thời gian:</strong> 12:00, Ngày 01/12/2025</p>
-        <p><strong>🌎Địa điểm:</strong> Hội trường A, Trường Đại học</p>
+        <p><strong>⏰Thời gian:</strong> 09:00, Ngày 21/02/2026</p>
+        <p><strong>🌎Địa điểm:</strong> Trường THPT Nguyễn Trãi</p>
         <p><strong>PhatLe</strong></p>
       </div>
       <div class="invitation-actions">
@@ -70,3 +70,4 @@
   <script type="module" src="./style/script.js"></script>
 </body>
 </html>
+
